# slack-objects

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml  publish.yml
src/slack_objects/: __init__.py  _version.py  api_caller.py  base.py  client.py  config.py  conversations.py  example.py  files.py  idp_groups.py  messages.py  rate_limits.py  scim_base.py  usergroups.py  users.py  workspaces.py
src/slack_objects.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: _smoke_harness.py  api_caller_smoke_test.py  conversations_smoke_test.py  files_smoke_test.py  idp_groups_example_test.py  idp_groups_smoke_test.py  live_test_config.example.json  messages_example_test.py  messages_smoke_test.py  run_all_smoke.py  security_smoke_test.py  test_users_example.py  users_smoke_test.py  users_test.py  users_test_AzureKeyVault.py  workspaces_smoke_test.py
tests/Examples/: examples_config.example.json  users_search_by_email_example.py  users_test_AzureKeyVault.py
tests/SCIM/: conftest_live.py  live_test_config.example.json  run_all_scim_users_live_tests.py  test_scim_idp_groups_live.py  test_scim_users_create_live.py  test_scim_users_deactivate_live.py  test_scim_users_input_validation_live.py  test_scim_users_live.py  test_scim_users_make_guest_live.py  test_scim_users_reactivate_live.py  test_scim_users_update_attribute_live.py  test_scim_users_update_email_live.py
tests/Smoke/: _smoke_harness.py  api_caller_smoke_test.py  conversations_smoke_test.py  files_smoke_test.py  idp_groups_smoke_test.py  messages_smoke_test.py  run_all_smoke.py  security_smoke_test.py  usergroups_smoke_test.py  users_smoke_test.py  workspaces_smoke_test.py
tests/UnitTests/: config_unit_test.py  conversations_example_test.py  files_unit_test.py  idp_groups_example_test.py  idp_groups_unit_test.py  messages_unit_test.py  rate_limits_unit_test.py  usergroups_test.py  users_example_test.py  users_unit_test.py  workspaces_example_test.py  workspaces_unit_test.py
tests/Users/: conftest_live.py  run_all_users_live_tests.py  test_users_admin_live.py  test_users_classification_live.py  test_users_input_validation_live.py  test_users_read_live.py
