[build-system]
requires = ["setuptools >= 77.0.3", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-objects"
# version = "0.0.1"  # Remove any existing version parameter.
dynamic = ["version"]

authors = [
{name="Marcos E. Mercado", email="marcos_elias@hotmail.com"},
]

description = "Opinionated, testable Python wrappers for Slack’s Web, Admin, and SCIM APIs, organized by object domain (users, conversations, messages, files, workspaces, and IdP groups). Designed for automation and administration workflows."
readme = "README.md"
requires-python = ">=3.9"

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = ["slack", "objects", "classes", "slack objects", "utilities", "slack utilities", "slack object types", "slack types", "types"]

dependencies = [
    "slack-sdk>=3.27,<4",
    "PC_Utils>=0.1",
    "requests>=2.31,<3",
]

[project.optional-dependencies]
#pc_utils = [
#  "PC_Utils",
#]
dev = [
  "pytest",
  "build",
  "twine",
]

[tool.setuptools_scm]
version_file = "src/slack_objects/_version.py"
local_scheme = "no-local-version"
version_scheme = "guess-next-dev"
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+(?:rc\\d+)?)$"